@@ -14,8 +14,8 @@ module.exports = (app, Config) => {
     CYBERCHEFVERSION: '9.28.0',
     elasticBase: Config.getArray('elasticsearch', ',', 'http://localhost:9200'),
     remoteClusters: Config.configMap('remote-clusters', 'moloch-clusters'),
-    esQueryTimeout: Config.get('elasticsearchTimeout', 300) + 's',
-    esScrollTimeout: Config.get('elasticsearchScrollTimeout', 900) + 's',
+    esQueryTimeout: Config.get('elasticsearchTimeout', 5*60) + 's',
+    esScrollTimeout: Config.get('elasticsearchScrollTimeout', 2*60) + 's',
     userNameHeader: Config.get('userNameHeader'),
     requiredAuthHeader: Config.get('requiredAuthHeader'),
     requiredAuthHeaderVal: Config.get('requiredAuthHeaderVal'),
